[package]

name = "rust-conway"
version = "0.0.1"
authors = ["Daniel Griffen <daniel@dgriffen.com>"]


[dependencies.piston2d-graphics]

git = "https://github.com/PistonDevelopers/graphics.git"

[dependencies.pistoncore-sdl2_window]

git = "https://github.com/PistonDevelopers/sdl2_window"

[dependencies.shader_version]

git = "https://github.com/PistonDevelopers/shader_version"

[dependencies.piston2d-opengl_graphics]

git = "https://github.com/PistonDevelopers/opengl_graphics"

[dependencies.pistoncore-event]

git = "https://github.com/PistonDevelopers/event"

[dependencies.pistoncore-input]

git = "https://github.com/PistonDevelopers/input"

[dependencies.current]

git = "https://github.com/PistonDevelopers/current"

[dependencies.quack]

git = "https://github.com/PistonDevelopers/quack"
